--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="RossHarvey.png" alt="Profile Picture">
+					<img class="profile-pic" src="SophieGriffiths.png" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -25,9 +25,9 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Ross Harvey</p>
-					<p class="text-title-company">Training Manager</p>
-					<p class="text-title-company">Training Department, Pirata Group</p>
+					<p class="text-name">Sophie Griffiths</p>
+					<p class="text-title-company">Head of Guest Relations</p>
+					<p class="text-title-company">Guest Relations Department, Pirata Group</p>
 				</div>
 				<div class="col">
 					<img src="pirata-group-logo.png" alt="Company Logo">
@@ -37,14 +37,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:ross@piratagroup.hk">
+		<a href="mailto:sophie@piratagroup.hk">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">ross@piratagroup.hk</p>
+						<p class="text-detail">sophie@piratagroup.hk</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+85254400219">
+		<a href="tel:+85267138813">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(+852) 5440 0219</p>
+						<p class="text-detail">(+852) 6713 8813</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -114,7 +114,7 @@
 				<div class="col"></div>
 				<div class="col is-5">
 					<div class="button">
-						<a href="rossharvey.vcf">
+						<a href="sophiegriffiths.vcf">
 							<p class="button">Download</p>
 						</a>
 					</div>
